基本完成功能，下一步优化，封装代码

--- a/MyApplication/app/src/main/res/layout/activity_weather.xml
+++ b/MyApplication/app/src/main/res/layout/activity_weather.xml
@@ -30,6 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_marginTop="10dp"
                 >
                 <include  layout="@layout/title" ></include>
                 <include  layout="@layout/nowweather" ></include>
