--- a/MyApplication/app/src/main/res/layout/title.xml
+++ b/MyApplication/app/src/main/res/layout/title.xml
@@ -22,6 +22,7 @@
         android:textSize="20sp" />
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/title_update_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
