--- a/MyApplication/app/src/main/res/layout/title.xml
+++ b/MyApplication/app/src/main/res/layout/title.xml
@@ -21,15 +21,14 @@
         android:textColor="#fff"
         android:textSize="20sp" />
 
-    <TextView
-        android:visibility="gone"
-        android:id="@+id/title_update_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/location_iv"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginRight="10dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:textColor="#fff"
-        android:textSize="16sp"/>
+        android:src="@drawable/ic_home"
+        />
 
 </RelativeLayout>
